# cuda_study

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  conanfile.txt  docker-compose.yaml
conan_build/: conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt  graph_info.json
include/HW2/Fractal/: color_to_greyscale.cuh  julia_fractal.cuh
include/HW2/Grey/: color_to_greyscale.cuh
src/: CMakeLists.txt
src/HW2/Fractal/: CMakeLists.txt
src/HW2/Fractal/cpp/: main.cpp
src/HW2/Fractal/cuda/: julia_fractal.cu
src/HW2/Grey/: CMakeLists.txt
src/HW2/Grey/cpp/: main.cpp
src/HW2/Grey/cuda/: color_to_greyscale.cu
src/HW2/GreyAns/: CMakeLists.txt  wow.cu
